Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-03 (SVN):
    * gamecode/hc/h2/pstboar.hc: commented out unreferenced create_swarm()
      function which is already disabled or removed in all other versions.

2011-07-03 (SVN):
    * net_ser.c, vid_ext.c: Fix strict aliasing violations in dos port.

2011-07-02 (SVN):
    * Updated gamecode README file and 1.5.0 release notes file.

2011-07-01 (SVN):
    * skullwiz.hc (skullwiz_ininit): Reset .enemy and .goalentity to world.
      Fixes bug #3314808 where a blinked away wizard wouldn't reappear if
      there was a summoned imp even after it went away.

2011-07-01 (SVN):
    * soul.hc: In case of rider bosses, don't spawn a soul sphere, because
      it will be inaccessible anyways and will confuse the player. Removed
      the temporary MOVETYPE_NONE assignment before droptofloor() call, as
      it's actually unnecessary.

2011-06-30 (SVN):
    * snake.hc (wake_effect): Set FL_ALIVE flag before calling snake_wake().
      Fixes bug #3314810 where the summoned imp didn't pick the Egypt snake
      boss as an enemy.

2011-06-29 (SVN):
    * docs/BUGS: Updated the list of known bugs.

2011-06-29 (SVN):
    * hexen2/host.c (Host_ClearMemory): Do not check if host_hunklevel is
      set before freeing the hunk allocations.  The order in Host_Init()
      is clear and Host_ClearMemory must not be hit before host_hunklevel
      is set. (otherwise, there _will_ be much trouble...)
    * hexenworld/cl_main.c (Host_ClearMemory): Likewise.

2011-06-29 (SVN):
    * gl_model.c (Mod_LoadSpriteFrame): Removed some useless memset calls
      onto newly hunk allocated memory. Hunk_Alloc() already clears the
      memory before returning it.
    * model.c (Mod_LoadSpriteFrame): Likewise.
    * sv_main.c (SV_SpawnServer): Likewise.

2011-06-28 (SVN):
    * Increased localmodels array size to 8 (better alignment and safer
      against any possible future changes to the MAX_MODELS macro.)
